refactor tests, create tests for builder, refactor querys